# togather

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
renderer/: app.js  index.html  styles.css
scripts/: bump-version.mjs  prepare-bare-sidecar.mjs  release.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
workers/: main.js  package-lock.json  package.json
