[package]
name = "togather"
version = "0.1.0"
description = "Peer-to-peer telepresence widget"
authors = ["Claire Froelich"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
core-graphics = "0.24"
